2013-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/coreboot/chainloader.c: Support lzma-compressed
	payload.

2013-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/lib/LzmaDec.h: Fix to include LzmaTypes.h and
	not Types.h.
	* grub-core/lib/LzmaDec.c: Fix prologue to make it compileable in GRUB
	environment.
	(LzmaDec_InitDicAndState): Make static.

2013-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimagexx.c (generate_elf): Fix module address on coreboot.

2013-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/ieee1275/escc.c (GRUB_MOD_INIT): Fix order of channels.

	Reported by: Aaro Koskinen <aaro.koskinen@iki.fi>

2013-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub-dev.texi: Replace bzr references with git ones.

2013-11-10  Andrey Borzenkov <arvidjaar@gmail.com>

	* docs/grub.texi (Simple configuration): Remove reference to
	grub-reboot from saved default entry description - grub-default
	does not use it anymore.

2013-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Make efiemu test cflags match the cflags efiemu is
	compiled with.

2013-11-10  Andrey Borzenkov <arvidjaar@gmail.com>

	* docs/grub.texi (Simple configuration): Document GRUB_DISABLE_SUBMENU.

2013-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix grub_machine_fini bitrot.

	Reported by: Glenn Washburn.

2013-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Remove leftover -fnested-funcions -Wl,-allow_execute.

2013-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.am (efiemu): Remove leftover -DAPPLE_CC and
	-DELF.
	* grub-core/efiemu/runtime/config.h: Use __i386__ and __x86_64__
	instead of ELF*.

2013-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Restore CFLAGS to TARGET_CFLAGS before external tests.
	Add -march=core2 when testing compile of efiemu64.

	Thanks Andrey Borzenkov for spotting this.
